--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:id="@+id/relativeLayout">
+    android:id="@+id/relativeLayout"
+    android:background="@drawable/back750720_baumoving">
 
     <!--TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" /-->
@@ -22,11 +23,29 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="100"
+        android:text="0"
         android:id="@+id/pointValueTextView"
         android:layout_alignTop="@+id/pointTextView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:textSize="30dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TestTest"
+        android:id="@+id/testTextView"
+        android:layout_below="@+id/pointTextView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:textSize="30dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/countdownTextView"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:textSize="30dp" />
 
 </RelativeLayout>
