repo change test

--- a/app/src/main/res/layout/welcome_screen_activity.xml
+++ b/app/src/main/res/layout/welcome_screen_activity.xml
@@ -35,7 +35,8 @@
         android:src="@drawable/baum2"
         />
 
-    <jp.akita.conchan.hole.RingImageView
+    <!--jp.akita.conchan.hole.RingImageView-->
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/imageView3"
